--- a/ChocolateCake.html
+++ b/ChocolateCake.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is chocolate cake recipe</h1>
+    <h1>How to make a chocolate cake</h1>
+    <ol>
+        <li>Pick up phone</li>
+        <li>Enter google</li>
+        <li>Search nearest bakery</li>
+        <li>Order a chocolate cake cause no one wants to actually make one</li>
+    </ol>
+    <h1>Done!</h1>
 </body>
 </html>
