--- a/Pasta.html
+++ b/Pasta.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is paste recipe</h1>
+    <h1>How to make pasta</h1>
+    <ol>
+        <li>kidnapp you most italian friend's wife and kids(parents also work)</li>
+        <li>Pickup phone</li>
+        <li>call the most italian friend you know</li>
+        <li>tell him you kidnapped his wife and kids (or parents)and he will get them back only after he makes you some pasta</li>
+        <li>get pasta from him</li>
+        <li>return family</li>
+    </ol>
+    <h1>Done!</h1>
 </body>
 </html>
