--- a/beans.html
+++ b/beans.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is beans recipe</h1>
+    <h1>How to make beans</h1>
+    <ol>
+            <li>Boil pot with water</li>
+            <li>pour beans</li>
+            <li>add salt</li>
+    </ol>
+    <h1>Done!</h1>
 </body>
 </html>
