--- a/rice.html
+++ b/rice.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is rice recipe</h1>
+    <h1>How to make Rice</h1>
+    <ol>
+        <li>go back to home page</li>
+        <li>enter pasta recipe</li>
+        <li>do the same thing only with a chinise guy</li>
+    </ol>
+    <h1>Done!</h1>
 </body>
 </html>
