--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <a href="beans.html"><li>beans</li></a>
         <li><img src="pics/beans.jpg" width="100px"></li>
         <a href="ChocolateCake.html"><li>chocolate cake</li></a>
-        <li><img src="pics/chocolate.webp" width="100px></li>
+        <li><img src="pics/chocolate.webp" width="100px"></li>
         <a href="Pasta.html"><li>Pasta bolongse</li></a>
-        <li><img src="pics/pasta.jpg" width="100px></li>
+        <li><img src="pics/pasta.jpg" width="100px"></li>
         <a href="rice.html"><li>Rice</li></a>
         <li><img src="pics/rice.jpg" width="100px"></li>
     </ul>
