--- a/rice.html
+++ b/rice.html
@@ -13,5 +13,6 @@
         <li>do the same thing only with a chinise guy</li>
     </ol>
     <h1>Done!</h1>
+    <a href="index.html">Return to home page</a>
 </body>
 </html>
