--- a/ChocolateCake.html
+++ b/ChocolateCake.html
@@ -14,5 +14,6 @@
         <li>Order a chocolate cake cause no one wants to actually make one</li>
     </ol>
     <h1>Done!</h1>
+    <a href="index.html">Return to home page</a>
 </body>
 </html>
